# llmxlaw

./: .env.sample  README.md  legal.txt  legal_complaint.json  legal_complaint.md  pyproject.toml  sample_case.txt  test.py
src/: config.py  main.py  prompts.py  writer.py
