[tool.poetry]
name = "llmxlaw"
version = "0.1.0"
description = ""
authors = ["leehanchung <lee.hanchung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.1.0rc3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
