[tool.poetry]
name = "llmxlaw"
version = "0.1.0"
description = ""
authors = [
    "leehanchung <lee.hanchung@gmail.com>",
    "Aaron Greenspan <aaron.greenspan@plainsite.org>",
    "Giussipina"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google-generativeai = "^0.1.0rc3"
python-dotenv = "^1.0.0"
langchain = "^0.0.175"
openai = "^0.27.7"
pdfkit = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
